# briefcase-debugadapter

./: README.md
briefcase-debugpy-debugadapter/: briefcase_debugpy_debugadapter.py  pyproject.toml  setup.py
briefcase-pdb-debugadapter/: briefcase_pdb_debugadapter.py  pyproject.toml  setup.py
