[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "briefcase-debugpy-debugadapter"
version = "0.1.0"
description = "Add-on for briefcase to add remote debugging via debugpy."
readme = "README.md"
license = "MIT"
authors = [{ name = "Tim Riddermann" }]
dependencies = ["debugpy"]
