[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "briefcase-pdb-debugadapter"
version = "0.1.0"
description = "Add-on for briefcase to add remote debugging via pdb."
readme = "README.md"
license = { file = "MIT" }
authors = [{ name = "Tim Riddermann" }]
dependencies = []
